Clean up Repository for Better Presentation to the General Public (#113)
* Unify userspace hostisolation code under one dir

* Unify userspace events code under one dir

* Make GPL/ dir structure the same as non-GPL/

Such that we have GPL/Events and non-GPL/Events (and the same for
HostIsolation). Delegate more work to subdirectory CMakeLists.txt files
to clean up the root CMakeLists.txt.

* Remove docs/

This was only holding one feature proposal and more aren't likely to be
added since that seems to be being done outside of VCS now. We'll still
have this doc in git history so just remove the dir to cleanup the
directory structure.

* Rename LibEbpfEvents to EbpfEvents

CMake will automatically prepend "Lib" to the name of something created
with add_library, resulting in a artifact called "LibLibEbpfEvents",
this has been bugging me for some time.

Also rename "LibEbpfEvents" directory to simply "Lib" for consistency
with HostIsolation directory, which puts all its userspace components in
a "Lib" directory.

* Remove GPL/Events/BPFEventsTests.cpp

This file was never used and is unlikely to be used now that we've got a
pretty comprehensive multikernel testing setup. If needed, it can be
re-checked out from CI, no use in keeping dead code around.

* Remove unneeded kernel re-definitions

A relic from the days when building this repo was tied to the endpoint
toolchain and it's ancient kernel headers required this kludge.

* Remove stale TODOs

Endpoint is currently running fine with a 256kb ringbuffer. This can be
changed in the future, but for now isn't causing any problems.

* Update README.md, move more specific docs to docs/

* Fix incorrect SPDX license identifiers

Both LicenseRef-Elastic-License-2.0 and Elastic-License-2.0 are
incorrect. The correct format is Elastic-2.0.

* Don't check code formatting in Jenkins

This is done in GitHub actions now.

* Fix EventsTrace path for new dir structure

* Fix ty

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,4 +1,4 @@
-# SPDX-License-Identifier: LicenseRef-Elastic-License-2.0
+# SPDX-License-Identifier: Elastic-2.0
 
 # Copyright 2021 Elasticsearch B.V. and/or licensed to Elasticsearch B.V. under one
 # or more contributor license agreements. Licensed under the Elastic License 2.0;
@@ -13,15 +13,11 @@ list(APPEND CMAKE_MODULE_PATH "${CMAKE_CURRENT_SOURCE_DIR}/cmake/modules")
 set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -g -O2 -Wall -fPIC")
 set(TARGET_DIR_DEFAULT "${CMAKE_CURRENT_BINARY_DIR}/target")
 set(TARGET_DIR "${TARGET_DIR_DEFAULT}" CACHE STRING "Custom target directory")
-set(TARGET_TMP_DIR "${CMAKE_CURRENT_BINARY_DIR}/target-tmp")
 set(TARGET_TEST_DIR "${TARGET_DIR}/test")
 set(TARGET_INCLUDE_DIR "${TARGET_DIR}/include")
 set(TARGET_EBPF_DIR "${TARGET_DIR}/ebpf")
-set(LIBEBPF_LIB "${TARGET_DIR}/libeBPF.a")
 
-# target
 file(MAKE_DIRECTORY ${TARGET_DIR})
-file(MAKE_DIRECTORY ${TARGET_TMP_DIR})
 file(MAKE_DIRECTORY ${TARGET_INCLUDE_DIR})
 file(MAKE_DIRECTORY ${TARGET_EBPF_DIR})
 file(MAKE_DIRECTORY ${TARGET_TEST_DIR})
@@ -33,48 +29,5 @@ include(arch)
 include(BPF)
 include(GoogleTest)
 
-add_subdirectory(GPL/HostIsolation/KprobeConnectHook)
-add_subdirectory(GPL/HostIsolation/TcFilter)
-add_subdirectory(GPL/EventProbe)
-
-add_subdirectory(non-GPL/LibEbpfEvents)
-add_subdirectory(non-GPL/Common)
-add_subdirectory(non-GPL/HostIsolation/KprobeConnectHook)
-add_subdirectory(non-GPL/HostIsolationMapsUtil)
-add_subdirectory(non-GPL/TcLoader)
-
-# EventsTrace
-# This contains a CLI tool named EventsTrace that can be
-# used to read Events using the GPL/Events BPF code
-# This also includes an implementation of the libebpf.h
-# header being discussed in https://github.com/elastic/ebpf/pull/38
-# The implementation's purpose is to allow us to keep working with a mock implementation while
-# the header is being finalized.
-add_subdirectory(non-GPL/EventsTrace)
-
-# LibEbpfEventsTestLoader
-# Include an executable that loads the probe with different combination
-# of features, to have a quick feedback in case something breaks during
-# development.
-add_subdirectory(non-GPL/LibEbpfEventsTestLoader)
-
-# libeBPF
-add_custom_command(OUTPUT ${LIBEBPF_LIB}
-                  WORKING_DIRECTORY ${TARGET_TMP_DIR}
-                  COMMAND ar x ${LIBBPF_LIB}
-                  COMMAND ar x ${LIBELF_LIB}
-                  COMMAND ar x $<TARGET_FILE:UpdateMaps>
-                  COMMAND ar x $<TARGET_FILE:KprobeLoader>
-                  COMMAND ar x $<TARGET_FILE:TcLoader>
-                  COMMAND ar x $<TARGET_FILE:Common>
-                  COMMAND ar cr ${LIBEBPF_LIB} *.o
-                  COMMENT "Assembling ${LIBEBPF_LIB}"
-                  DEPENDS libbpf libelf UpdateMaps KprobeLoader TcLoader Common)
-
-add_custom_target(libeBPF ALL DEPENDS ${LIBEBPF_LIB})
-add_library(EbpfLib STATIC IMPORTED GLOBAL)
-set_property(TARGET EbpfLib PROPERTY
-    IMPORTED_LOCATION "${LIBEBPF_LIB}")
-add_dependencies(EbpfLib TcLoader KprobeLoader UpdateMaps libeBPF)
-
-add_library(Ebpf ALIAS EbpfLib)
+add_subdirectory(GPL)
+add_subdirectory(non-GPL)
