--- a/non-GPL/Events/CMakeLists.txt
+++ b/non-GPL/Events/CMakeLists.txt
@@ -4,9 +4,5 @@
 # or more contributor license agreements. Licensed under the Elastic License 2.0;
 # you may not use this file except in compliance with the Elastic License 2.0.
 
-if (NOT ARCH)
-    set(ARCH "${CMAKE_HOST_SYSTEM_PROCESSOR}")
-endif()
-if (NOT ARCH_TRUNC)
-    string(REPLACE "x86_64" "x86" ARCH_TRUNC ${ARCH})
-endif()
+add_subdirectory(Lib)
+add_subdirectory(EventsTrace)
