Remove -lz from library link targets
With this being the case, anything that links to libbpf will
*dynamically* link libz, which we don't want for endpoint. Remove -lz
from libbpf and manually add it to all executables that need it, with
a comment to remove later when we vendor in libz.

--- a/GPL/HostIsolation/TcFilter/CMakeLists.txt
+++ b/GPL/HostIsolation/TcFilter/CMakeLists.txt
@@ -39,6 +39,7 @@ target_include_directories(BPFTcFilterTests
 
 add_dependencies(BPFTcFilterTests BPFTcFilter)
 
-target_link_libraries(BPFTcFilterTests libbpf ${GTEST_LIB} -pthread)
+# TODO: Remove "-lz" once we've vendored in libz
+target_link_libraries(BPFTcFilterTests libbpf ${GTEST_LIB} -pthread -lz)
 add_dependencies(BPFTcFilterTests libbpf libelf gtest)
 
