--- a/non-GPL/Events/EventsTrace/CMakeLists.txt
+++ b/non-GPL/Events/EventsTrace/CMakeLists.txt
@@ -7,8 +7,7 @@
 add_executable(EventsTrace EventsTrace.c)
 add_dependencies(EventsTrace EbpfEvents EventProbe_skeleton libbpf libelf)
 
-# TODO: Remove "libbpf -lz" once we've vendored in libz
-target_link_libraries(EventsTrace EbpfEvents libbpf -lz)
+target_link_libraries(EventsTrace EbpfEvents libbpf)
 
 if (BUILD_STATIC_EVENTSTRACE)
     target_link_libraries(EventsTrace -static)
