--- a/docker/Dockerfile.imagepack
+++ b/docker/Dockerfile.imagepack
@@ -1,6 +1,6 @@
 FROM docker.io/ubuntu:latest
 COPY / /kernel-img-repository/
 
-LABEL org.opencontainers.image.source https://github.co/elastic/ebpf
+LABEL org.opencontainers.image.source https://github.com/elastic/ebpf
 
 CMD ["/bin/bash", "-c", "cp -r /kernel-img-repository/* /kernel-images/"]
