--- a/GPL/HostIsolation/KprobeConnectHook/CMakeLists.txt
+++ b/GPL/HostIsolation/KprobeConnectHook/CMakeLists.txt
@@ -5,23 +5,22 @@
 # This software is dual-licensed under the BSD 2-Clause and GPL v2 licenses, you
 # may choose either one of them if you use this software.
 
+ebpf_get_includes(LIBBPF_INCLUDES libbpf)
+
 set(KPROBECONNECTHOOK_CFLAGS
-                        -g -O2
-                        -D__TARGET_ARCH_${ARCH_TRUNC}
-                        -D__${ARCH}__
-                        -I${PROJECT_SOURCE_DIR}/contrib/libbpf/include
-                        -I/usr/include
-                        -I${LIBBPF_TARGET_INCLUDE_DIR}
-                        -I${LIBBPF_UAPI_INCLUDE_DIR}
-                        -I${CMAKE_SOURCE_DIR}/non-GPL/Common
-                        -fno-ident)
+    -g -O2
+    -D__TARGET_ARCH_${ARCH_TRUNC}
+    -D__${ARCH}__
+    -I/usr/include
+    ${LIBBPF_INCLUDES}
+    -fno-ident)
 
 set(KPROBECONNECTHOOK_BPF_OUTPUT ${HOSTISOLATION_EBPF_OBJECT_DIR}/KprobeConnectHook.bpf.o)
-add_custom_command(OUTPUT ${KPROBECONNECTHOOK_BPF_OUTPUT}
-                  COMMAND ${EBPF_EXTERNAL_ENV_FLAGS} ${BPF_COMPILER} ${BPF_COMPILER_FLAGS} ${KPROBECONNECTHOOK_CFLAGS} -c ${CMAKE_CURRENT_SOURCE_DIR}/KprobeConnectHook.bpf.c -o ${KPROBECONNECTHOOK_BPF_OUTPUT}
-                  COMMENT "Building ${KPROBECONNECTHOOK_BPF_OUTPUT}"
-                  DEPENDS libbpf
-                  IMPLICIT_DEPENDS C ${CMAKE_CURRENT_SOURCE_DIR}/KprobeConnectHook.bpf.c)
+set(KPROBECONNECTHOOK_BPF_SKELETON_PATH ${HOSTISOLATION_EBPF_OBJECT_DIR}/KprobeConnectHook.skel.h)
 
-add_custom_target(BPFKprobeConnectHook ALL DEPENDS ${HOSTISOLATION_EBPF_OBJECT_DIR}/KprobeConnectHook.bpf.o)
-
+ebpf_probe_target(BPFKprobeConnectHook
+    SOURCES ${CMAKE_CURRENT_SOURCE_DIR}/KprobeConnectHook.bpf.c
+    DEPENDENCIES libbpf vmlinux
+    FLAGS ${KPROBECONNECTHOOK_CFLAGS}
+    GENSKELETON INSTALL
+)
