--- a/GPL/HostIsolation/TcFilter/CMakeLists.txt
+++ b/GPL/HostIsolation/TcFilter/CMakeLists.txt
@@ -4,41 +4,36 @@
 #
 # This software is dual-licensed under the BSD 2-Clause and GPL v2 licenses, you
 # may choose either one of them if you use this software.
+ebpf_get_includes(LIBBPF_INCLUDES libbpf)
+ebpf_get_includes(VMLINUX_INCLUDES vmlinux)
 
 set(TCFILTER_CFLAGS
-                -g -O2 -nostdinc -mcpu=v2
-                -I${PROJECT_SOURCE_DIR}/contrib/kernel_hdrs
-                -I${LIBBPF_UAPI_INCLUDE_DIR}
-                -D__KERNEL__
-                -D__BPF_TRACING
-                -Wno-unused-value
-                -Wno-pointer-sign
-                -Wno-compare-distinct-pointer-types
-                -Wno-gnu-variable-sized-type-not-at-end
-                -Wno-address-of-packed-member
-                -Wno-tautological-compare
-                -fno-asynchronous-unwind-tables
-                -fno-stack-protector
-                -fno-ident)
+    -g -O2 -nostdinc -mcpu=v2
+    -I${PROJECT_SOURCE_DIR}/contrib/kernel_hdrs
+    -I${LIBBPF_INCLUDES}
+    -D__KERNEL__
+    -D__BPF_TRACING
+    -Wno-unused-value
+    -Wno-pointer-sign
+    -Wno-compare-distinct-pointer-types
+    -Wno-gnu-variable-sized-type-not-at-end
+    -Wno-address-of-packed-member
+    -Wno-tautological-compare
+    -fno-asynchronous-unwind-tables
+    -fno-stack-protector
+    -fno-ident)
 
 
-set(TCFILTER_BPF_OUTPUT ${HOSTISOLATION_EBPF_OBJECT_DIR}/TcFilter.bpf.o)
-add_custom_command(OUTPUT ${TCFILTER_BPF_OUTPUT}
-                  COMMAND ${EBPF_EXTERNAL_ENV_FLAGS} ${BPF_COMPILER} ${BPF_COMPILER_FLAGS} ${TCFILTER_CFLAGS} -c ${CMAKE_CURRENT_SOURCE_DIR}/TcFilter.bpf.c -o ${TCFILTER_BPF_OUTPUT}
-                  COMMENT "Building  ${TCFILTER_BPF_OUTPUT}"
-                  IMPLICIT_DEPENDS C ${CMAKE_CURRENT_SOURCE_DIR}/TcFilter.bpf.c)
+ebpf_probe_target(BPFTcFilter
+    SOURCES ${CMAKE_CURRENT_SOURCE_DIR}/TcFilter.bpf.c
+    DEPENDENCIES libbpf vmlinux
+    FLAGS ${TCFILTER_CFLAGS}
+    PUBLIC_HEADERS TcFilterdefs.h
+    GENSKELETON INSTALL
+)
 
-add_custom_target(BPFTcFilter ALL DEPENDS  ${TCFILTER_BPF_OUTPUT})
-
-# BPF_PROG_TEST_RUN gtests
-add_executable(BPFTcFilterTests BPFTcFilterTests.cpp ${GTEST_MAIN})
-target_include_directories(BPFTcFilterTests
-    PRIVATE
-    "${LIBBPF_UAPI_INCLUDE_DIR}"
-    "${GTEST_INCLUDE}")
-
-add_dependencies(BPFTcFilterTests BPFTcFilter)
-
-target_link_libraries(BPFTcFilterTests libbpf ${GTEST_LIB} -pthread)
-add_dependencies(BPFTcFilterTests libbpf libelf gtest)
-
+ebpf_gtest_binary(BPFTcFilterTests
+    SOURCES BPFTcFilterTests.cpp
+    LINK BPFTcFilter libbpf
+    INSTALL
+)
