--- a/non-GPL/HostIsolation/Lib/CMakeLists.txt
+++ b/non-GPL/HostIsolation/Lib/CMakeLists.txt
@@ -4,16 +4,9 @@
 # or more contributor license agreements. Licensed under the Elastic License 2.0;
 # you may not use this file except in compliance with the Elastic License 2.0.
 
-add_library(EbpfHostIsolation STATIC
-    TcLoader.c
-    KprobeLoader.c
-    UpdateMaps.c
-    Common.c)
-
-target_include_directories(EbpfHostIsolation
-    PRIVATE
-    "${LIBBPF_UAPI_INCLUDE_DIR}"
-    PUBLIC
-    "${CMAKE_CURRENT_SOURCE_DIR}")
-
-target_link_libraries(EbpfHostIsolation libbpf)
+ebpf_static_library(EbpfHostIsolation
+    SOURCES TcLoader.c KprobeLoader.c UpdateMaps.c Common.c
+    LINK BPFTcFilter BPFKprobeConnectHook libbpf
+    PUBLIC_HEADERS TcLoader.h KprobeLoader.h UpdateMaps.h Common.h
+    INSTALL
+)
