--- a/non-GPL/HostIsolation/Demos/CMakeLists.txt
+++ b/non-GPL/HostIsolation/Demos/CMakeLists.txt
@@ -3,14 +3,13 @@
 # Copyright 2021 Elasticsearch B.V. and/or licensed to Elasticsearch B.V. under one
 # or more contributor license agreements. Licensed under the Elastic License 2.0;
 # you may not use this file except in compliance with the Elastic License 2.0.
-function(add_demo name)
-    add_executable("${name}" "${name}.c")
-    target_include_directories(${name}
-        PRIVATE
-        "${LIBBPF_UAPI_INCLUDE_DIR}"
-        "${PROJECT_SOURCE_DIR}/non-GPL/HostIsolation/Lib")
 
-    target_link_libraries("${name}" PRIVATE EbpfHostIsolation libbpf)
+function(add_demo name)
+    ebpf_static_binary(${name}
+        SOURCES ${name}.c
+        LINK EbpfHostIsolation libbpf
+        INSTALL
+    )
 endfunction()
 
 add_demo(TcLoaderDemo)
