--- a/.github/workflows/multikernel-tester.yml
+++ b/.github/workflows/multikernel-tester.yml
@@ -29,8 +29,15 @@ jobs:
         qemu-user-static
       env:
         DEBIAN_FRONTEND: noninteractive
-    - name: Build eBPF probes and userspace components
-      run: make build ARCH=${{ matrix.arch }}
+    - name: Get Env
+      run: echo "ELASTIC_EBPF_VERSION=$(cat VERSION)" >> $GITHUB_ENV && echo "PWD=$(pwd)" >> $GITHUB_ENV
+    - name: Download Build Artifacts
+      uses: actions/download-artifact@v3
+      with:
+        name: elastic-ebpf-${{ matrix.arch }}
+        path: ${{ env.PWD }}/artifacts
+    - name: Untar
+      run: cd artifacts && tar -zxf elastic-ebpf-${ELASTIC_EBPF_VERSION}-SNAPSHOT.tar.gz
     - name: Install Go
       uses: actions/setup-go@v3
       with:
@@ -38,7 +45,7 @@ jobs:
     - name: Get Kernel Images
       run: make get-kernel-images IMG_FILTER=${{ matrix.kernel_flavor }}
     - name: Run tests
-      run: make multi-kernel-test IMG_FILTER=${{ matrix.kernel_flavor }} ARCH=${{ matrix.arch }}
+      run: make run-multikernel-test IMG_FILTER=${{ matrix.kernel_flavor }} ARCH=${{ matrix.arch }} EVENTSTRACE_PATH=${PWD}/artifacts/bin/EventsTrace
     - name: Archive test summary
       if: always()
       uses: actions/upload-artifact@v3
