strip before generating skeleton to avoid bad strings

--- a/GPL/Events/CMakeLists.txt
+++ b/GPL/Events/CMakeLists.txt
@@ -14,8 +14,6 @@ else()
     set(BPF_DEBUG_TRACE 0)
 endif()
 
-set(EVENTS_PROBE_SOURCE_DIR ${CMAKE_CURRENT_SOURCE_DIR})
-
 set(EVENTS_PROBE_CFLAGS
     -g -O2
     ${LIBBPF_INCLUDES} ${VMLINUX_INCLUDES}
@@ -23,14 +21,12 @@ set(EVENTS_PROBE_CFLAGS
     -DBPF_DEBUG_TRACE=${BPF_DEBUG_TRACE}
     -D__TARGET_ARCH_${ARCH_TRUNC}
     -D__${ARCH}__
-    -I${EVENTS_PROBE_SOURCE_DIR}
+    -I${CMAKE_CURRENT_SOURCE_DIR}
     -fno-ident
 )
 
-set(EVENTS_PROBE_SOURCES ${EVENTS_PROBE_SOURCE_DIR}/EventProbe.bpf.c)
-
 ebpf_probe_target(EventProbe
-    SOURCES ${EVENTS_PROBE_SOURCES}
+    SOURCES ${CMAKE_CURRENT_SOURCE_DIR}/EventProbe.bpf.c
     DEPENDENCIES libbpf vmlinux
     FLAGS ${EVENTS_PROBE_CFLAGS}
     PUBLIC_HEADERS EbpfEventProto.h
