--- a/.github/workflows/local-build.yml
+++ b/.github/workflows/local-build.yml
@@ -1,13 +1,19 @@
 on:
   workflow_call:
+    inputs:
+      architecture:
+        required: true
+        type: string
+        description: Architecture string, for example aarch64
+      runner:
+        required: true
+        type: string
+        description: The runner to execute the build on, for example ubuntu-latest
 
 jobs:
   local-image-build:
-    strategy:
-      fail-fast: false
-      matrix:
-        arch: [ x86_64, aarch64 ]
-    runs-on: ubuntu-latest
+    name: Container Image Build
+    runs-on: ${{ inputs.runner }}
     steps:
       - uses: actions/checkout@v2
       - name: Configure System
@@ -17,8 +23,8 @@ jobs:
         env:
           DEBIAN_FRONTEND: noninteractive
       - name: Test Container Image Formatting
-        run: make test-format BUILD_CONTAINER_IMAGE=True ARCH=${{matrix.arch}}
+        run: make test-format BUILD_CONTAINER_IMAGE=True ARCH=${{ inputs.architecture }}
       - name: Test Container Image Build
-        run: make build BUILD_CONTAINER_IMAGE=True ARCH=${{matrix.arch}}
+        run: make build BUILD_CONTAINER_IMAGE=True ARCH=${{ inputs.architecture }}
       - name: Test Packaging
-        run: make package BUILD_CONTAINER_IMAGE=True ARCH=${{matrix.arch}}
+        run: make package BUILD_CONTAINER_IMAGE=True ARCH=${{ inputs.architecture }}
