Remove repititions from name

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -30,7 +30,7 @@ jobs:
       runner: ubuntu-latest
     secrets: inherit
   multikernel-tester-x86_64:
-    name: Platform (x86_64)
+    name: Test (x86_64)
     needs:
       - build-x86_64
     uses: ./.github/workflows/multikernel-tester.yml
@@ -40,7 +40,7 @@ jobs:
       kernels: '[ "amazonlinux2", "debian", "fedora", "kali1", "kali3", "kali4", "kali5-7", "kali8-9", "mainline",  "ubuntu-aws", "ubuntu-azure", "ubuntu-gcp", "ubuntu-gke", "ubuntu-oem", "ubuntu-oracle" ]'
     secrets: inherit
   multikernel-tester-aarch64:
-    name: Platform (aarch64)
+    name: Test (aarch64)
     needs:
       - build-aarch64
     uses: ./.github/workflows/multikernel-tester.yml
